# r2d2-memcache

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: connection_info.rs  connection_manager.rs  error.rs  lib.rs
tests/: test.rs  test_connection.rs  test_numerous_connection.rs
