[package]
name = "r2d2-memcache"
version = "0.1.2"
authors = ["Keishi Kawada <Kk-shli@outlook.jp>"]
license = "MIT"
description = "Memcached support for the r2d2 connection pool"
repository = "https://github.com/megumish/r2d2-memcache"
keywords = ["memcached", "memcache", "pool", "nosql", "database"]

[dependencies]
r2d2 = "0.8"
memcache = "0.9"
